Story 2319. Fixed login form width and removed extra space between the header and the main content.

--- a/css/canfar-bs4.css
+++ b/css/canfar-bs4.css
@@ -34,10 +34,6 @@ li a {
   padding-left: 25px;
 }
 
-div.container {
-  padding-top: 80px;
-}
-
 .container-fluid {
   height: 100%;
   padding-top: 45px;
@@ -134,7 +130,6 @@ div.container {
   }
 
   ul.login-container {
-    min-width: 470px;
     background-color: #f5f5f5;
     border: 1px solid #eee;
   }
